# greenletio

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
benchmarks/context_switches/: asyncio_event.py  greenletio_event.py  standard_event.py
benchmarks/postgres/: README.md  eventlet_psycopg2.py  gevent_psycopg2.py  greenletio_asyncpg.py  greenletio_psycopg2.py  plain_psycopg2.py  requirements.txt  runall.sh  zzzeek_asyncio_greenlet_part_11.py  zzzeek_asyncio_plus_greenlet.py  zzzeek_plain_asyncio.py  zzzeek_simpler_asyncio.py
benchmarks/sockets/: README.md  _test.py  eventlet_sockets.py  gevent_sockets.py  greenletio_sockets.py  runall.sh  standard_sockets.py
benchmarks/threads/: README.md  asyncio_tasks.py  eventlet_threads.py  gevent_threads.py  greenletio_async_await.py  greenletio_threads.py  standard_threads.py
docs/: api.rst  conf.py  index.rst  internals.rst  purpose.rst  quickstart.rst
examples/: async_requests.py  async_to_sync_sleep.py  sync_to_async_sleep.py
greenletio/: __init__.py  core.py  io.py  patcher.py
greenletio/green/: queue.py  socket.py  ssl.py  threading.py  time.py
src/greenletio/: __init__.py  cli.py  core.py  io.py  patcher.py
src/greenletio/green/: select.py  selectors.py  socket.py  ssl.py  threading.py  time.py
tests/: client.crt  client.key  server.crt  server.key  test_cli.py  test_core.py  test_greenletio.py  test_patcher.py  test_queue.py  test_select.py  test_socket.py  test_ssl.py  test_threading.py  util.py
