[metadata]
name = greenletio
version = 0.10.2.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Asyncio integration with sync code using greenlets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/greenletio
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/greenletio/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    greenlet

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    greenletio = greenletio.cli:main

[options.extras_require]
docs =
    sphinx
